--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>The View</title>
         <link rel="shortcut icon" href="img/world-news.png">
+        <link rel="stylesheet" href="src/overide.css">
     </head>
     <body>
         <div id="root"></div>
