--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta charset="utf-8">
         <title>The View</title>
         <link rel="shortcut icon" href="img/world-news.png">
         <link rel="stylesheet" href="src/overide.css">
