--- a/pages/economy.html
+++ b/pages/economy.html
@@ -2,8 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="uk">
     <body>
-        <div id="root">
-            <p>Економіка</p>
-        </div>
+        <div id="root"></div>
     </body>
+    <script defer src="./bandledEconomy.js"></script>
 </html>
