--- a/pages/policy.html
+++ b/pages/policy.html
@@ -2,9 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="uk">
     <body>
-        <div id="root">
-            <p>Політика</p>
-        </div>
+        <div id="root"></div>
     </body>
     <script defer src="./bandledPolicy.js"></script>
 </html>
