--- a/pages/sport.html
+++ b/pages/sport.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+<link rel="shortcut icon" href="../img/world-news.png">
+<link rel="stylesheet" href="../src/overide.css">
 <html lang="uk">
     <body>
         <div id="root"></div>
