--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
+        <meta property="og:image" content="./img/world-news.png">
+        <meta property="og:site_name" content="The View">
         <title>The View</title>
         <link rel="shortcut icon" href="img/world-news.png">
         <link rel="stylesheet" href="src/overide.css">
