--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
-        <meta property="og:image" content="./img/world-news.png">
+        <meta property="og:image" content="https://www.thoughtco.com/thmb/IDdGVdLIEUssOgYGOl0FiZrMYwo=/2576x2576/smart/filters:no_upscale()/beautiful-woman-with-natural-make-up-897056188-5c2d3aff4cedfd000165bdef.jpg">
         <meta property="og:site_name" content="The View">
         <title>The View</title>
         <link rel="shortcut icon" href="img/world-news.png">
