--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html prefix="og: https://ogp.me/ns/article">
+<html prefix="og: https://ogp.me/ns#">
     <head>
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
-        <meta property="og:title" content="The Rock" />
-        <meta property="og:type" content="article:author" />
-        <meta property="og:url" content="https://yaoleksa.github.io/news/" />
-        <meta property="og:image" content="img/world-news.png" />
+        <meta property="og:title" content="The View">
+        <meta property="og:description" content="Descriptor">
+        <meta property="og:type" content="article">
+        <meta property="og:url" content="https://yaoleksa.github.io/news/index.html">
+        <meta property="og:image" content="./img/world-news.png" />
+        <meta property="og:site_name" content="The View">
         <title>The View</title>
         <link rel="shortcut icon" href="img/world-news.png">
         <link rel="stylesheet" href="src/overide.css">
