--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html prefix="og: https://ogp.me/ns#">
     <head>
+        <meta http-equiv="Refresh" content="0; url='https://geekflare.com/global-news-api/'" />
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
