--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html prefix="og: https://ogp.me/ns#">
     <head>
         <meta http-equiv="Refresh" 
-        content="0; url='https://rapidapi.com/newscatcher-api-newscatcher-api-default/api/google-news/'" />
+        content="0; url='https://rapidapi.com/blog/rapidapi-featured-news-apis/?utm_source=google&utm_medium=cpc&utm_campaig'" />
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
