--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
-        <meta id="ogtitle" property="og:title" content="The View">
-        <meta id="ogdescription" property="og:description" content="Descriptor">
-        <meta id="ogtype" property="og:type" content="article">
-        <meta id="ogurl" property="og:url" content="https://yaoleksa.github.io/news/index.html">
-        <meta id="ogimage" property="og:image" content="./img/world-news.png" />
-        <meta id="ogname" property="og:site_name" content="The View">
+        <meta property="og:title" content="The View">
+        <meta property="og:description" content="Окрім фактів, важлива ще й точка зору">
+        <meta property="og:type" content="article">
+        <meta property="og:url" content="https://dailyviewnews.herokuapp.com/">
+        <meta property="og:image" content="./img/world-news.png" />
+        <meta property="og:site_name" content="The View">
         <title>The View</title>
         <link rel="shortcut icon" href="img/world-news.png">
         <link rel="stylesheet" href="src/overide.css">
