--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:description" content="Окрім фактів, важлива ще й точка зору">
         <meta property="og:type" content="article">
         <meta property="og:url" content="https://dailyviewnews.herokuapp.com/">
-        <meta property="og:image" content="./img/world-news.png" />
+        <meta property="og:image" href="./img/world-news.png" />
         <meta property="og:site_name" content="The View">
         <title>The View</title>
         <link rel="shortcut icon" href="img/world-news.png">
