--- a/pages/culture.html
+++ b/pages/culture.html
@@ -9,7 +9,7 @@
 <meta property="og:image" href="../img/world-news.png" />
 <meta property="og:site_name" content="The View">
 <title>The View</title>
-<link rel="shortcut icon" href="../img/world-news.png">
+<link rel="shortcut icon" content="../img/world-news.png">
 <link rel="stylesheet" href="../src/overide.css">
 <html lang="uk">
     <body>
