work with links

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
         <meta property="og:title" content="The View">
-        <meta property="og:description" content="Окрім фактів, важлива ще й точка зору">
         <meta property="og:type" content="article">
+        <meta id="ogdescription" property="og:description" content="Окрім фактів, важлива ще й точка зору">
         <meta property="og:url" content="https://dailyviewnews.herokuapp.com/">
-        <meta property="og:image" content="./img/world-news.png" />
+        <meta id="ogimage" property="og:image" content="./img/world-news.png" />
         <meta property="og:site_name" content="The View">
         <title>The View</title>
         <link rel="shortcut icon" href="img/world-news.png">
