--- a/pages/ass.html
+++ b/pages/ass.html
@@ -2,6 +2,7 @@
 <html dir="ltr" lang="uk">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ass</title>
     <link rel="shortcut icon" href="https://image.shutterstock.com/image-photo/beautiful-young-girl-sexy-ass-260nw-455122474.jpg">
   </head>
